--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "prettier": "^3.2.5",
     "turbo": "^2.0.12",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@repo/typescript-config": "workspace:*"
   },
   "packageManager": "pnpm@8.15.6",
   "engines": {
