--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -9,22 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0",
     "@repo/shared-types": "workspace:*",
-		"@repo/validation-schemas": "workspace:*"
+    "@repo/validation-schemas": "workspace:*",
+    "next": "15.0.0-rc.0",
+    "react": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "19.0.0-rc-f994737d14-20240522"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "typescript": "^5",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
-    "@repo/tailwind-config": "workspace:^",
-		"@repo/typescript-config": "workspace:*",
-    "tailwindcss": "^3.4.0"
+    "postcss": "^8.4.41",
+    "autoprefixer": "^10.4.20",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5"
   }
 }
