--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -34,8 +34,10 @@
     "@prisma/client": "5.18.0",
     "@repo/shared-types": "workspace:*",
     "@repo/validation-schemas": "workspace:*",
+    "@types/cookie-parser": "^1.4.7",
     "axios": "^1.7.3",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "express-session": "^1.18.0",
     "graphql": "^16.9.0",
     "passport": "^0.7.0",
