--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,6 +40,7 @@
     "cookie-parser": "^1.4.6",
     "express-session": "^1.18.0",
     "graphql": "^16.9.0",
+    "graphql-type-json": "^0.3.2",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "passport-local": "^1.0.0",
@@ -53,6 +54,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/graphql-type-json": "^0.3.5",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-local": "^1.0.38",
