feat(submission): setup javascript execution

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     {
       "mode": "auto"
     }
-  ]
+  ],
+  "editor.fontFamily": "'MesloLGL Nerd Font','Menlo', 'Monaspace Neon', monospace, Cascadia Code PL"
 }
