--- a/apps/challenger/package.json
+++ b/apps/challenger/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin",
+  "name": "challenger",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@repo/shared-types": "workspace:*",
+    "@repo/ui": "workspace:*",
     "@repo/validation-schemas": "workspace:*",
+    "lucide": "^0.433.0",
+    "lucide-react": "^0.438.0",
     "next": "15.0.0-rc.0",
+    "next-themes": "^0.3.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522"
   },
@@ -22,10 +26,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
     "postcss": "^8.4.41",
-    "autoprefixer": "^10.4.20",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
