--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,28 +1,49 @@
 {
-  "name": "@repo/ui",
-  "version": "0.0.0",
-  "private": true,
-  "exports": {
-    "./button": "./src/button.tsx",
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
-  },
-  "scripts": {
-    "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component"
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "@turbo/gen": "^1.12.4",
-    "@types/node": "^20.11.24",
-    "@types/eslint": "^8.56.5",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "eslint": "^8.57.0",
-    "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "react": "^18.2.0"
-  }
+	"name": "@repo/ui",
+	"version": "0.0.0",
+	"sideEffects": [
+		"**/*.css"
+	],
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": "./dist/index.mjs",
+		"./tailwind.config": "./tailwind.config.ts",
+		"./globals.css": "./src/styles/globals.css"
+	},
+	"license": "MIT",
+	"scripts": {
+		"dev": "tsup --watch",
+		"build": "tsup",
+		"ui:add": "npx shadcn-ui@latest add",
+		"lint:format": "pnpm biome format --write .",
+		"lint:fix": "pnpm biome check --apply .",
+		"lint:check": "pnpm biome check ."
+	},
+	"peerDependencies": {
+		"react": "^18.2.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.7.3",
+		"@repo/eslint-config": "workspace:*",
+		"@repo/tailwind-config": "workspace:*",
+		"@repo/typescript-config": "workspace:*",
+		"@types/node": "^20.14.9",
+		"@types/react": "^18.2.46",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.33",
+		"react": "^18.2.0",
+		"tailwindcss": "^3.4.0",
+		"tsup": "^8.0.1",
+		"typescript": "^5.3.3"
+	},
+	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.0",
+		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss-animate": "^1.0.7"
+	}
 }
