--- a/apps/challenger/package.json
+++ b/apps/challenger/package.json
@@ -17,7 +17,8 @@
     "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
