--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -41,6 +41,8 @@
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-toggle": "^1.1.0",
+		"@radix-ui/react-toggle-group": "^1.1.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"tailwind-merge": "^2.3.0",
