--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,6 +45,7 @@
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"react-resizable-panels": "^2.1.2",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7"
 	}
