feat(ui-challenge-page): layout page

--- a/apps/challenger/package.json
+++ b/apps/challenger/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@repo/shared-types": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/validation-schemas": "workspace:*",
