--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,20 +29,22 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "5.18.0",
     "@repo/shared-types": "workspace:*",
     "@repo/validation-schemas": "workspace:*",
-    "@types/cookie-parser": "^1.4.7",
     "axios": "^1.7.3",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.18.0",
     "graphql": "^16.9.0",
     "graphql-type-json": "^0.3.2",
+    "just-safe-get": "^4.2.0",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -53,10 +55,12 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/graphql-type-json": "^0.3.5",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
