feat: added lang select

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
       "mode": "auto"
     }
   ],
-  "editor.fontFamily": "'MesloLGL Nerd Font','Menlo', 'Monaspace Neon', monospace, Cascadia Code PL"
+  "editor.fontFamily": "'JetBrains Mono', 'MesloLGL Nerd Font','Menlo', 'Monaspace Neon', monospace, Cascadia Code PL"
 }
