--- a/apps/challenger/package.json
+++ b/apps/challenger/package.json
@@ -13,6 +13,8 @@
     "@repo/shared-types": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/validation-schemas": "workspace:*",
+    "@tanstack/react-query": "^5.56.2",
+    "graphql": "^16.9.0",
     "lucide": "^0.433.0",
     "lucide-react": "^0.438.0",
     "next": "15.0.0-rc.0",
@@ -22,6 +24,11 @@
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.12.14",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/schema-ast": "^4.1.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
+    "@parcel/watcher": "^2.4.1",
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
