--- a/apps/challenger/tsconfig.json
+++ b/apps/challenger/tsconfig.json
@@ -10,6 +10,10 @@
     "plugins": [
       {
         "name": "next"
+      },
+      {
+        "name": "@0no-co/graphqlsp",
+        "schema": "./schema.graphql"
       }
     ]
   },
