--- a/apps/challenger/package.json
+++ b/apps/challenger/package.json
@@ -18,10 +18,12 @@
     "lucide": "^0.433.0",
     "lucide-react": "^0.438.0",
     "next": "15.0.0-rc.0",
+    "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.14",
