--- a/apps/challenger/package.json
+++ b/apps/challenger/package.json
@@ -23,6 +23,7 @@
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-markdown": "^9.0.1",
+    "zod": "^3.23.8",
     "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
