--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,6 +42,7 @@
     "graphql": "^16.9.0",
     "graphql-type-json": "^0.3.2",
     "just-safe-get": "^4.2.0",
+    "nestjs-cls": "^4.4.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "passport-jwt": "^4.0.1",
