--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint:check": "biome check .",
-    "lint:fix": "biome format --write ."
+    "lint:fix": "biome format --write .",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
     "@repo/typescript-config": "workspace:*",
+    "husky": "^9.1.6",
     "prettier": "^3.2.5",
     "turbo": "^2.0.12",
     "typescript": "^5.4.5"
