--- a/apps/challenger/package.json
+++ b/apps/challenger/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@next/env": "^14.2.13",
     "@repo/shared-types": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/validation-schemas": "workspace:*",
