--- a/apps/challenger/package.json
+++ b/apps/challenger/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.14",
     "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/client-preset": "4.3.3",
     "@graphql-codegen/schema-ast": "^4.1.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@parcel/watcher": "^2.4.1",
