--- a/apps/challenger/package.json
+++ b/apps/challenger/package.json
@@ -13,6 +13,7 @@
     "@next/env": "^14.2.13",
     "@repo/ui": "workspace:*",
     "@tanstack/react-query": "^5.56.2",
+    "geist": "^1.3.1",
     "graphql": "^16.9.0",
     "lucide": "^0.433.0",
     "lucide-react": "^0.438.0",
