--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,7 @@
     "graphql": "^16.9.0",
     "graphql-type-json": "^0.3.2",
     "just-safe-get": "^4.2.0",
+    "ms": "^2.1.3",
     "nestjs-cls": "^4.4.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
@@ -56,6 +57,7 @@
     "@types/express": "^4.17.17",
     "@types/graphql-type-json": "^0.3.5",
     "@types/jest": "^29.5.2",
+    "@types/ms": "^0.7.34",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
