--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
+    "gql:gen": "turbo gql:gen",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint:check": "biome check .",
     "lint:fix": "biome check --apply .",
