--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,10 @@
       "cache": false,
       "persistent": true
     },
+    "gql:gen": {
+      "cache": false,
+      "persistent": true
+    },
     "clean": {
       "cache": false
     }
